Proyecto Paso #5 - Se agrego repo para guardar en BD Mongo - Se agrego DockerCompose

--- a/service-suma/src/main/resources/application.properties
+++ b/service-suma/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.data.mongodb.database=sumas
+spring.data.mongodb.host=${MONGO_SERVER}
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=mongo123
